--- a/vulnerable/templates/index.html
+++ b/vulnerable/templates/index.html
@@ -7,6 +7,7 @@
     <p>What is your name?</p>
     <form method="POST">
         {% csrf_token %}
-        <input type="text" name="name" placeholder="Max" />
+        <input type="text" name="name" placeholder="Max" 
+               <input type="submit"  value="los"/>
     </form>
 {% endif %}
